# SRE

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_all_tasks.py  simulator.py  tasks.py
demo/: check_demo_dataset.py  demo_dataset.json  meta.code-workspace  meta_hackathon_dataset.template.json
hf_space/: app.py  requirements.txt
scripts/: deploy_hf_space.sh
server/: app.py
sre_bench/: __init__.py  env.py  models.py  rl.py  simulator.py  tasks.py  ui.py  webapp.py
